# review-bench

./: README.md  pyproject.toml
data/: samples.jsonl
review_bench/: __init__.py  cli.py  models.py  samples.py  scorer.py
tests/: conftest.py  test_models.py  test_samples.py  test_scorer.py
