[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "review-bench"
version = "0.1.0"
description = "Evaluate AI-powered code review setups against a curated benchmark of buggy code samples."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "review_bench contributors" }
]
keywords = ["code-review", "benchmark", "llm", "ai", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "google-generativeai>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
review-bench = "review_bench.cli:app"

[project.urls]
Homepage = "https://github.com/example/review_bench"
Repository = "https://github.com/example/review_bench"
Issues = "https://github.com/example/review_bench/issues"

[tool.hatch.build.targets.wheel]
packages = ["review_bench"]
include = ["data/*.jsonl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build]
include = [
    "review_bench/",
    "data/",
    "README.md",
    "pyproject.toml",
]
